fix: [CDNG-11383]: Fixed the overflow issue for menu item in select & multiselects (#370)

--- a/src/components/MultiSelect/MultiSelect.css
+++ b/src/components/MultiSelect/MultiSelect.css
@@ -102,6 +102,14 @@
     align-items: center;
     cursor: pointer;
 
+    .menuItemLabel {
+      color: var(--black);
+      font-weight: 400;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      word-break: break-all;
+    }
+
     & .checkbox {
       margin: 0 var(--spacing-small) 0 0;
     }
